--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng deploy --no-silent --base-href https://rav1ol33.github.io/Search-Try-prod/"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "angular-cli-ghpages": "^1.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
